# Sahten

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOY.md  Data_base_2.json  INTEGRATION_GUIDE.md  Procfile  README.md  Specifications.md  commit_msg.txt  data_base_OLJ_enriched.json  golden_data_base.json  olj_recette_liban_a_table.json  plat_libanais_test.md  railway.toml  requirements.txt  vercel.json
v4/: .env.example  .gitignore  Dockerfile.migrations  Dockerfile.web  Dockerfile.worker  README.md  pyproject.toml  railway.toml
v4/backend/: main.py
v4/data/: Data_base_2.json  aliases_dishes.json  aliases_ingredients.json  benchmark_context_pack.json  benchmark_results.json  benchmark_structured_openai.json  benchmark_structured_openai.md  benchmark_structured_openrouter.json  benchmark_structured_openrouter.md  benchmark_understanding_cases.json  golden_eval_coherence_recipes_fr.json  golden_eval_fr.json  ingredient_cooccurrence.json  olj_seed_ids.json
v4/docs/: alias-self-improving-agent.md  alias-validation-report.md  aws-deploy-security.md  brief-olj-team.md  brief-whitebeard.md  cooccurrence-report.md  eval-golden-set.md  git-push-etiquette.md  go-live-sota-v4.md  metadata-graph-sota.md  prompt-alias-research.md  rag-epicure-audit.md  railway-deploy.md  railway-runbook.md  repo-flatten.md  suppression-anciennes-versions.md
v4/infra/: docker-compose.yml
v4/scripts/: audit_ingredients.py  audit_whitebeard.py  benchmark_models.py  build_cooccurrence.py  cleanup_workspace.py  debug_pagination.py  docker_entrypoint.sh  eval_rag.py  fetch_whitebeard.py  ingest_cli.py  live_smoke_eval.py  mark_all_articles_ok.py  mine_missing_aliases.py  probe_auth.py  qa_grid.py  run_rag_eval.py  validate_aliases.py
v4/tests/: conftest.py  test_aliases.py  test_article_rerank.py  test_base2_last_resort.py  test_card_dish_gating.py  test_chunker.py  test_cooccurrence.py  test_cost_tracker.py  test_generated_recipe.py  test_golden_json.py  test_html_renderer_links.py  test_html_sectionizer.py  test_ingredient_audit.py  (+8 more)
(+230 files in other folders)
